--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
 	    <title>배움, 서울</title>
-	    <link rel="stylesheet" type="text/css" href="./css/common.css" />
+	    <link rel="stylesheet" type="text/css" href="./common.css" />
 		<style type="text/css">
 			.inner p{line-height:40px;font-size:14px;}
 		</style>
@@ -38,7 +38,7 @@
 		</footer>
 	</div>	
     </body>
-    <script type="text/javascript" charset="utf-8" src="./script/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="./jquery-1.10.2.min.js"></script>
 	<script type="text/javascript">
 		function getParameter(param) {
 
