--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			<div>
 				<div class="title">
-					<img src="./img/app_logo.png" height="50px" />
+					<img src="./app_logo.png" height="50px" />
 				</div>
 			</div>
 		</header>
