--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<footer>
 			<div id="download" style="background-color:#dc2e5a;text-align:center;height:60px;line-height:60px;color:#fff;">
-			앱 설치하기 (Google PlayStore 이동)
+			앱 다운로드 (출처를 알 수 없는 앱 허용 필요)
 			</div>
 		</footer>
 	</div>	
